samples/_failures_safe/1761704068_c9d837_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c5fae80.c: In function ‘main’:
./samples/SAFE/__tmp_2c5fae80.c:143:28: error: missing terminating " character
  143 |                     printf("Invalid
      |                            ^~~~~~~~
./samples/SAFE/__tmp_2c5fae80.c:143:21: error: expected expression at end of input
  143 |                     printf("Invalid
      |                     ^~~~~~
./samples/SAFE/__tmp_2c5fae80.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2c5fae80.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2c5fae80.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2c5fae80.c:143:21: error: expected declaration or statement at end of input
